tests/paczka1/small_fuzzy/66161491.err
Error in line 6: S0 A186 35,0
Error in line 8: S0 A186 8,4
Error in line 14: f14x2bDn S0 87,8
